Clean repo and add ability to add soundbites
Removed unnecessary files and added ability of audio cog to download mp3's attached to messages for use in soundboard

--- a/.gitignore
+++ b/.gitignore
@@ -131,13 +131,8 @@ dmypy.json
 .idea
 Livetoken.txt
 Testtoken.txt
-token.json
-factbot.jpg
-first_200k_2007.txt
 howto.txt
-unused cogs/
-tools/GoogleAPi/imageRecognition.py
-tools/downloadPunkt.py
-good_factbots/prune.jpg
 Dockerfile-test
 concept.txt
+*.mp3
+*/twittertoken.json
