--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        apt-get update
+        apt-get install -y ffmpeg
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -35,3 +37,10 @@ jobs:
 #     - name: Test with pytest
 #       run: |
 #         pytest
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: plop91/plop_discord
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
