--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -26,8 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        apt-get update
-        apt-get install -y ffmpeg
+#        apt-get update
+#        apt-get install -y ffmpeg
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
