--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -5,7 +5,7 @@ name: DiscordBot
 
 on:
   push:
-    branches: [ master docker-repo-test ]
+    branches: [ master, docker-repo-test ]
   pull_request:
     branches: [ master ]
 
