--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-discord.py # Discord interface
-argparse # Command line argument parcer
-tweepy # Twitter interface, required by twitterCog.py
-wget # Web interface, required by twitterCog.py
-mysql-connector-python # Databse interface, required by settings.py
-ffmpeg-python # Video and audio processing, required by audioCog.py
-youtube_dl # video downloader, required by audioCog.py
-pynacl # additional networking, required by audioCog.py
-markovify # markov chain library, required by audioCog.py
-gtts # google text to speech, required by audioCog.py
+discord.py >= 2.2.2                 # Discord interface
+argparse >= 1.1                     # Command line argument parcer
+tweepy >= 3.9.0                     # Twitter interface, required by twitterCog.py
+wget >= 3.2                         # Web interface, required by twitterCog.py
+mysql-connector-python >= 8.0.23    # Databse interface, required by settings.py
+ffmpeg-python >= 0.2.0              # Video and audio processing, required by audioCog.py
+youtube_dl >= 2021.3.3              # video downloader, required by audioCog.py
+pynacl >= 1.4.0                     # additional networking, required by audioCog.py
+markovify >= 0.9.0                  # markov chain library, required by audioCog.py
+gtts >= 2.2.2                       # google text to speech, required by audioCog.py
+openai                              # openai api, required by openaiCog.py
