--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -60,4 +60,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plop91/plop_discord:latest
+          tags: plop91/plop_discord:v2
