general improvements, new OpenAI assistant feature

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -11,4 +11,4 @@ COPY . ./
 RUN apt-get update && apt-get install -y ffmpeg
 RUN python3 -m pip install -r requirements.txt
 # Run Bot
-CMD ["python3", "BotHead.py"]
+CMD ["python3", "BotHead.py", "--json", "testinginfo.json"]
