--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -57,4 +57,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plop91/plop_discord:devel
+          tags: plop91/plop_discord:nightly
