--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ dmypy.json
 .idea
 howto.txt
 *.docx
-*.json
+#*.json
 *.mp3
 *.txt
 /texts/
@@ -144,3 +144,4 @@ schema.sql
 old/
 */old/
 utility/
+markov/
