--- a/.github/workflows/DiscordBot.yml
+++ b/.github/workflows/DiscordBot.yml
@@ -5,8 +5,6 @@ name: DiscordBot
 
 on:
   push:
-    branches-ignore:
-      - ian-nightly
 
 jobs:
   build:
@@ -59,4 +57,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plop91/plop_discord:nightly
+          tags: plop91/plop_discord:${GITHUB_REF##*/}
